--- a/dada/installer-disabled/templates/captcha_default_test_widget.tmpl
+++ b/dada/installer-disabled/templates/captcha_default_test_widget.tmpl
@@ -11,7 +11,7 @@
 		
 	<!-- tmpl_else --> 
 	
-		<div data-alert class="alert-box success radius">> 
+		<div class="alert-box info radius"> 
 			<p>
 				If you see the CAPTCHA widget below, <strong>Default CAPTCHA</strong> Configuration Worked!.
 			</p>
