--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1298,7 +1298,7 @@ editors also have the ability to make simple HTML tables for basic layouts.
 	<fieldset> 
 		
 		
-		<div data-alert class="alert-box success radius">> 
+		<div class="alert-box info radius"> 
 		
 		<!-- tmpl_if can_use_GD --> 
 				<ul>
