--- a/dada/templates/admin_menu_widget.tmpl
+++ b/dada/templates/admin_menu_widget.tmpl
@@ -1,9 +1,16 @@
 <!-- begin admin_menu_widget.tmpl -->
 
 <div id="navcontainer" data-s_program_url="<!-- tmpl_var S_PROGRAM_URL -->">    
-<!-- tmpl_if comment -->    <ul class="off-canvas-list"><!-- /tmpl_if --> 
-    <ul class="side-nav">
-        
+
+
+
+    
+    <!-- tmpl_if for_mobile --> 
+       <ul class="off-canvas-list">
+    <!-- tmpl_else --> 
+        <ul class="side-nav">
+    <!-- /tmpl_if --> 
+    
         <!-- tmpl_loop name="NAV" -->
             <!-- tmpl_unless Activated --> 
                 <!-- tmpl_if hide_nav -->
@@ -18,7 +25,6 @@
                 <!-- tmpl_var Title -->
             </label>
             </li>
-            
             
             <!-- tmpl_loop SUBNAV -->
                 <!-- tmpl_unless Activated --> 
