--- a/dada/templates/archive_screen.tmpl
+++ b/dada/templates/archive_screen.tmpl
@@ -6,7 +6,7 @@
 
 <!-- tmpl_if send_archive_success -->
 	
-	<div data-alert class="alert-box success radius">>
+	<div class="alert-box info radius">
 	<p>
 	 The message has been forwarded to your friend!
 	</p>
