--- a/dada/templates/changes_saved_dialog_box_widget.tmpl
+++ b/dada/templates/changes_saved_dialog_box_widget.tmpl
@@ -1,14 +1,7 @@
 <!-- begin changes_saved_dialog_box_widget.tmpl --> 
 
-<div data-alert class="alert-box success radius"> id="alertbox">
-
-	<p>
-		Your changes have been saved!
-	</p>
-
-	<div style="text-align: center;">
-	<input type="button" class="small_button fade_me" value="Ok!" />
-	</div>
-	
+<div data-alert class="alert-box success radius">
+	Your changes have been saved!
+	<a href="#" class="close">&times;</a>
 </div> 
 <!-- end changes_saved_dialog_box_widget.tmpl --> 
