--- a/dada/templates/discussion_list_support_notice_widget.tmpl
+++ b/dada/templates/discussion_list_support_notice_widget.tmpl
@@ -2,7 +2,7 @@
 
 
 <!-- tmpl_if expr="((list_settings.group_list == 1) && (list_settings.disable_discussion_sending != 1))" --> 
-    <div data-alert class="alert-box success radius">>
+    <div class="alert-box info radius">
 		<p>
 			Discussion List Support is enabled and Discussion List preferences will be honored.
 		</p>
