--- a/dada/templates/list_download_widget.tmpl
+++ b/dada/templates/list_download_widget.tmpl
@@ -13,11 +13,12 @@
 		
 		<input type="hidden" name="order_by" value="<!-- tmpl_var order_by -->" />
 		<input type="hidden" name="order_dir" value="<!-- tmpl_var order_dir -->" />
-		<input type="submit" class="small_button" value="&#8595; Export Search Results (.csv)" />
+
+		<input type="submit" class="button small" value="&#8595; Export Search Results (.csv)" />
 		
 	<!-- tmpl_else --> 
 	
-		<input type="submit" class="small_button" value="&#8595; Export <!-- tmpl_var type_title --> (.csv)" />
+		<input type="submit" class="button small" value="&#8595; Export <!-- tmpl_var type_title --> (.csv)" />
 
 	<!-- /tmpl_if --> 
 	
