--- a/dada/templates/list_invite_screen.tmpl
+++ b/dada/templates/list_invite_screen.tmpl
@@ -52,7 +52,7 @@
 		Your Invitees
 	 </legend>
 	 <div style="max-height: 200px; overflow: auto; border:1px solid black;background:#fff">
-	 <table class="stripedtable">
+	 <table  class="stripedtable">
 	  <tr>
 	   <td width="25">
 	    <p>&nbsp;</p>
@@ -121,7 +121,7 @@
 	 <legend>
 	 	Already Invited Addresses</legend>
 	
-	<div data-alert class="alert-box success radius">>
+	<div class="alert-box info radius">
 		<p>
 		The below addresses have already been invited to your mailing list. 
 		
@@ -133,7 +133,7 @@
 	</div> 
 		
 	 <div style="max-height: 200px; overflow: auto; border:1px solid black;background:#fff">
-	 <table class="stripedtable">
+	 <table  class="stripedtable">
 	  <tr>
 	   <td width="25">
 	    <p>&nbsp;</p>
