--- a/dada/templates/mass_mailing_options_screen.tmpl
+++ b/dada/templates/mass_mailing_options_screen.tmpl
@@ -33,7 +33,8 @@
                 Convert PlainText-only Mass Email Messages to HTML
             </label>
         </div>
-
+    </div> 
+    <div class="row">
         <div class="small-12 columns">
             <input type="checkbox" name="mass_mailing_block_css_to_inline_css" id="mass_mailing_block_css_to_inline_css" value="1" <!-- tmpl_if list_settings.mass_mailing_block_css_to_inline_css -->checked="checked"<!-- /tmpl_if --> />
             <label for="mass_mailing_block_css_to_inline_css" <!-- tmpl_unless can_use_css_inliner -->class="disabled"<!-- /tmpl_unless -->>
@@ -47,8 +48,8 @@
                     </p>
                 </div> 
             <!-- /tmpl_unless -->
+        </div> 
     </div> 
-    
                     
 
 
