--- a/dada/templates/mass_mailing_preferences_screen.tmpl
+++ b/dada/templates/mass_mailing_preferences_screen.tmpl
@@ -56,7 +56,7 @@
    </p>
 
 
-<div data-alert class="alert-box success radius">>
+<div class="alert-box info radius">
 <!-- tmpl_if show_amazon_ses_options --> 
 	<div id="amazon_ses_get_stats_loading"></div> 
 	<div id="amazon_ses_get_stats"></div> 
@@ -82,7 +82,7 @@
 
 </div>
 
-<table cellpadding="5">
+<table  cellpadding="5">
 	<!-- tmpl_if show_amazon_ses_options -->
 			<tr>
 		  <td>
