--- a/dada/templates/membership_activity_screen.tmpl
+++ b/dada/templates/membership_activity_screen.tmpl
@@ -22,7 +22,7 @@
 
 <!-- tmpl_else --> 
 
-	<div data-alert class="alert-box success radius">>
+	<div class="alert-box info radius">
 		<p>
 			There hasn't yet been any logged Membership Activity for this mailing list. 
 		</p>
