--- a/dada/templates/plugins/screen_cache/view.tmpl
+++ b/dada/templates/plugins/screen_cache/view.tmpl
@@ -12,7 +12,7 @@
 </div>
 
 
-<div data-alert class="alert-box success radius">>
+<div class="alert-box info radius">
 
 	<p>Screen Caching is currently <strong>
 <!-- tmpl_if cache_active --> 
@@ -45,7 +45,7 @@
 
 	<div style="max-height: 300px; overflow: auto; border:1px solid black">
 
-	<table class="stripedtable">
+	<table  class="stripedtable">
 
 
 	<tr> 
