--- a/dada/templates/profile_fields_screen.tmpl
+++ b/dada/templates/profile_fields_screen.tmpl
@@ -46,7 +46,7 @@
     		</p>
     	<!-- /tmpl_if --> 
     	<div style="text-align:center;">
-    	    <input type="button" class="small_button fade_me" value="Ok!" />
+    	    <input type="button" class="button small fade_me" value="Ok!" />
     	</div>
 
 	</div> 
@@ -156,7 +156,7 @@
 	
     <!-- /tmpl_unless --> 
     
-	<div data-alert class="alert-box success radius">>
+	<div class="alert-box info radius">
 	<p>
 	 Profile Fields are <strong>Global</strong> and will affect all Mailing Lists. 
 	 You may only change the Profile Fields if you are logged in with the <!-- tmpl_var PROGRAM_NAME --> 
@@ -178,7 +178,7 @@
   
 	<div style="max-height: 200px; overflow: auto; border:1px solid black">
 
-	 <table class="stripedtable">
+	 <table  class="stripedtable">
          <tr> 
                    <!-- tmpl_if root_login --> 
 			 <td> 
@@ -374,7 +374,7 @@
         	
     		<!-- /tmpl_unless -->
 
-            <table cellpadding="5" cellspacing="0" width="100%"> 
+            <table  cellpadding="5" cellspacing="0" width="100%"> 
              <tr> 
 				<td align="right"> 
                 <p>
