--- a/dada/templates/profile_login.tmpl
+++ b/dada/templates/profile_login.tmpl
@@ -6,7 +6,7 @@
 <div id="profile_login_registration"></div>
 
 <!-- tmpl_if removal --> 
-    <div data-alert class="alert-box success radius">>
+    <div class="alert-box info radius">
         <p> 
             Your Profile has been removed.
         </p> 
@@ -14,7 +14,7 @@
 <!-- /tmpl_if --> 
 
 <!-- tmpl_if welcome --> 
-    <div data-alert class="alert-box success radius">>
+    <div class="alert-box info radius">
         <p>
             You have been successfully registered! Please log in with your Profile email address and password:
         </p> 
@@ -46,14 +46,14 @@
 
 
 <!-- tmpl_if logged_out --> 
-    <div data-alert class="alert-box success radius">>
+    <div class="alert-box info radius">
         <p>
             Logged out. 
         </p> 
     </div> 
 <!-- /tmpl_if --> 
 <!-- tmpl_if password_changed --> 
-    <div data-alert class="alert-box success radius">>
+    <div class="alert-box info radius">
         <p> 
             You've successfully changed your Profile password ! Please log in again:
         </p> 
@@ -186,7 +186,7 @@
 
 
   
-     <div data-alert class="alert-box success radius">> 
+     <div class="alert-box info radius"> 
          <p>
              <!-- tmpl_var PROGRAM_NAME --> Profiles allow you to view and work with all 
              your <!-- tmpl_var PROGRAM_NAME --> subscriptions.
