--- a/dada/templates/validate_remove_email_widget.tmpl
+++ b/dada/templates/validate_remove_email_widget.tmpl
@@ -1,6 +1,6 @@
 <!-- begin validate_remove_email_widget.tmpl -->
 
-<div data-alert class="alert-box success radius">> 
+<div class="alert-box info radius"> 
 	
 	<p>
 		<strong>
