--- a/dada/templates/view_archive_index_screen.tmpl
+++ b/dada/templates/view_archive_index_screen.tmpl
@@ -15,7 +15,7 @@
 <form name="email_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
  <input type="hidden" name="flavor" value="delete_archive" /> 
 
- <table class="stripedtable">
+ <table  class="stripedtable">
   <tr>
    <td width="25">
     <p>&nbsp;</p>
@@ -88,7 +88,7 @@
 
 </table> 
 
-<table class="stripedtable">
+<table  class="stripedtable">
   <tr>
    	<td width="25">
 		<!-- no offense, but why is the checkbox named, "address?" --> 
@@ -96,12 +96,12 @@
 
    	</td>
 	<td>
-	 <input type="submit" class="small_button" value="Delete Checked" />
+	 <input type="submit" class="button small" value="Delete Checked" />
 	</form>
 
 		<form action="<!-- tmpl_var S_PROGRAM_URL -->" style="display:inline;margin:0">  
 		   <input type="hidden" name="flavor" value="purge_all_archives" />  
-		   <input type="submit" class="small_button purge_archives" value="Purge All Archive Messages" />
+		   <input type="submit" class="button small purge_archives" value="Purge All Archive Messages" />
 	   </form> 
 
 	 </td>
