--- a/dada/templates/view_list_modalmenu_widget.tmpl
+++ b/dada/templates/view_list_modalmenu_widget.tmpl
@@ -2,134 +2,104 @@
 
 <!-- tmpl_if expr="((add_email_count > 0) || (update_email_count > 0)  || (delete_email_count  > 0) || (black_list_add > 0) || (approved_count  > 0) || (denied_count  > 0) || (bounced_list_moved_to_list_count  > 0) || (bounced_list_removed_from_list > 0)  || (updated_addresses > 0) )" --> 
 
-<div data-alert class="alert-box success radius"> id="alertbox">
-	
-	
-<!-- tmpl_if add_email_count -->	
-	<p>
-	<!-- tmpl_if email --> 
-		<!-- tmpl_var email --> has been
-	<!-- tmpl_else --> 
-		<!-- tmpl_var add_email_count --> address(es) have been 
-	<!-- /tmpl_if --> 
-	added to <!-- tmpl_var type_title -->.
-	</p>
-<!-- /tmpl_if -->
+<div data-alert class="alert-box success radius">
+    <!-- tmpl_if add_email_count -->	
+    	<!-- tmpl_if email --> 
+    		<!-- tmpl_var email --> has been
+    	<!-- tmpl_else --> 
+    		<!-- tmpl_var add_email_count --> address(es) have been 
+    	<!-- /tmpl_if --> 
+    	added to <!-- tmpl_var type_title -->.
+
+    <!-- /tmpl_if -->
 
 
-<!-- tmpl_if update_email_count -->	
-	<p>
-		<!-- tmpl_var update_email_count --> address(es) have been updated.
-	</p>
-<!-- /tmpl_if -->
+    <!-- tmpl_if update_email_count -->	
+    		<!-- tmpl_var update_email_count --> address(es) have been updated.
+    <!-- /tmpl_if -->
 
 
 
 
-<!-- tmpl_if skipped_email_count -->
-	<p>
-		<!-- tmpl_if email --> 
-			<!-- tmpl_var email --> 
-		<!-- tmpl_else --> 
-			<!-- tmpl_var skipped_email_count --> address(es) 
-		<!-- /tmpl_if --> 	
-			could not be added to <!-- tmpl_var type_title -->.
-	</p>	
-<!-- /tmpl_if -->
+    <!-- tmpl_if skipped_email_count -->
+    		<!-- tmpl_if email --> 
+    			<!-- tmpl_var email --> 
+    		<!-- tmpl_else --> 
+    			<!-- tmpl_var skipped_email_count --> address(es) 
+    		<!-- /tmpl_if --> 	
+    			could not be added to <!-- tmpl_var type_title -->.
+    <!-- /tmpl_if -->
 
-<!-- tmpl_if delete_email_count -->
-	<p>
-		<!-- tmpl_if email --> 
-			<!-- tmpl_var email --> has been 
-		<!-- tmpl_else --> 
-			<!-- tmpl_var delete_email_count --> address(es) have been 
-		<!-- /tmpl_if --> 	
-			removed<!-- tmpl_if type_title--> from, <!-- tmpl_var type_title --><!-- /tmpl_if -->.
-	</p>
-<!-- /tmpl_if -->
+    <!-- tmpl_if delete_email_count -->
+    		<!-- tmpl_if email --> 
+    			<!-- tmpl_var email --> has been 
+    		<!-- tmpl_else --> 
+    			<!-- tmpl_var delete_email_count --> address(es) have been 
+    		<!-- /tmpl_if --> 	
+    			removed<!-- tmpl_if type_title--> from, <!-- tmpl_var type_title --><!-- /tmpl_if -->.
+    <!-- /tmpl_if -->
 
 
 
-<!-- tmpl_if approved_count --> 
-	<p>
-		<!-- tmpl_if email --> 
-			<!-- tmpl_var email --> has been 
-		<!-- tmpl_else --> 
-			<!-- tmpl_var approved_count --> address(es) have been 
-		<!-- /tmpl_if --> 	
-			approved for 
-		<!-- tmpl_if expr="(type eq 'unsub_request_list')" --> 
-		    removal.
-		<!-- tmpl_else --> 
-		    subscription.
-		<!-- /tmpl_if -->
+    <!-- tmpl_if approved_count --> 
+    		<!-- tmpl_if email --> 
+    			<!-- tmpl_var email --> has been 
+    		<!-- tmpl_else --> 
+    			<!-- tmpl_var approved_count --> address(es) have been 
+    		<!-- /tmpl_if --> 	
+    			approved for 
+    		<!-- tmpl_if expr="(type eq 'unsub_request_list')" --> 
+    		    removal.
+    		<!-- tmpl_else --> 
+    		    subscription.
+    		<!-- /tmpl_if -->
+    <!-- /tmpl_if --> 
 
-	
-	</p>
-<!-- /tmpl_if --> 
+    <!-- tmpl_if denied_count --> 
+    		<!-- tmpl_if email --> 
+    			<!-- tmpl_var email --> has been 
+    		<!-- tmpl_else --> 
+    			<!-- tmpl_var denied_count --> address(es) have been 
+    		<!-- /tmpl_if --> 
+    		denied a subscription.
+    <!-- /tmpl_if -->
 
-<!-- tmpl_if denied_count --> 
-	<p>
-		<!-- tmpl_if email --> 
-			<!-- tmpl_var email --> has been 
-		<!-- tmpl_else --> 
-			<!-- tmpl_var denied_count --> address(es) have been 
-		<!-- /tmpl_if --> 
-		denied a subscription.
-	</p>
-<!-- /tmpl_if -->
+    <!-- tmpl_if bounced_list_moved_to_list_count --> 
+    		<!-- tmpl_if email --> 
+    			<!-- tmpl_var email --> has been 
+    		<!-- tmpl_else --> 
+    			<!-- tmpl_var bounced_list_moved_to_list_count --> address(es) have been 
+    		<!-- /tmpl_if -- >
+    			moved back to Subscription List.
+    <!-- /tmpl_if -->
 
-<!-- tmpl_if bounced_list_moved_to_list_count --> 
-	<p>
-		<!-- tmpl_if email --> 
-			<!-- tmpl_var email --> has been 
-		<!-- tmpl_else --> 
-			<!-- tmpl_var bounced_list_moved_to_list_count --> address(es) have been 
-		<!-- /tmpl_if -- >
-			moved back to Subscription List.
-	</p>
-<!-- /tmpl_if -->
+    <!-- tmpl_if bounced_list_removed_from_list --> 
+    	<!-- tmpl_if email --> 
+    		<!-- tmpl_var email --> has been 
+    	<!-- tmpl_else --> 
+    		<!-- tmpl_var bounced_list_removed_from_list --> bouncing address(es) have been 
+    	<!-- /tmpl_if -->
+    	permanently removed from you Subscribers.
+    <!-- /tmpl_if -->
 
-<!-- tmpl_if bounced_list_removed_from_list --> 
-	<p>
-	
-	<!-- tmpl_if email --> 
-		<!-- tmpl_var email --> has been 
-	<!-- tmpl_else --> 
-		<!-- tmpl_var bounced_list_removed_from_list --> bouncing address(es) have been 
-	<!-- /tmpl_if -->
-	permanently removed from you Subscribers.
-	</p>
-<!-- /tmpl_if -->
-
-<!-- tmpl_if black_list_add --> 
-	<p>
-		<!-- tmpl_if email --> 
-			<!-- tmpl_var email --> has been 
-		<!-- tmpl_else --> 
-			<!-- tmpl_var black_list_add --> address(es) have been
-		<!-- /tmpl_if -->
+    <!-- tmpl_if black_list_add --> 
+    		<!-- tmpl_if email --> 
+    			<!-- tmpl_var email --> has been 
+    		<!-- tmpl_else --> 
+    			<!-- tmpl_var black_list_add --> address(es) have been
+    		<!-- /tmpl_if -->
 		
-		 added to Black List. 
-	</p>
-<!-- /tmpl_if -->
+    		 added to Black List. 
+    <!-- /tmpl_if -->
 
-<!-- tmpl_if updated_addresses --> 
-	<p>
-	    <strong>
-	        <!-- tmpl_var updated_addresses -->
-	    </strong>
-	     address(es) have been updated.
-	</p>
-<!-- /tmpl_if -->
+    <!-- tmpl_if updated_addresses --> 
+    	    <strong>
+    	        <!-- tmpl_var updated_addresses -->
+    	    </strong>
+    	     address(es) have been updated.
+    <!-- /tmpl_if -->
 
-
-		
-	<div style="text-align: center;">
-	
-	<input type="button" class="small_button fade_me" value="Thanks!" />
-	</div>
-
+    <a href="#" class="close">&times;</a>
 </div> 
 
 <!-- /tmpl_if -->
