--- a/dada/templates/view_list_table_widget.tmpl
+++ b/dada/templates/view_list_table_widget.tmpl
@@ -1,10 +1,11 @@
 <!-- begin view_list_table_widget.tmpl --> 
 
+<!-- 
+<div style="width:100%"> 
+    <div style="height: 300px; overflow: auto; width:100%">
+--> 
 
-<div> 
-    <div style="height: 300px; overflow: auto;">
-
- <table class="stripedtable">
+ <table style="width:100%">
 
 <thead> 			
 		
@@ -16,7 +17,7 @@
 	<!-- /tmpl_unless --> 
 
     <!-- tmpl_if show_timestamp_column --> 
-    	<th>
+    	<th width="200">
     	    <p>
 	     	<!-- tmpl_if expr="(order_by ne 'timestamp')" -->
     			<a href="#" class="change_order" data-by="timestamp" data-dir="asc">
@@ -124,7 +125,7 @@
 <tbody> 
 <!-- tmpl_loop subscribers -->
 	   
-	   <tr <!-- tmpl_if __odd__ -->class="alt"<!--/tmpl_if-->>
+	   <tr>
 
 		   <!-- tmpl_unless no_checkboxes --> 
 		
@@ -138,7 +139,7 @@
 	    
 
         <!-- tmpl_if show_timestamp_column --> 
-    		<td>
+    		<td width="200">
     		    <p>
     		      <!-- tmpl_var timestamp --> 
     		    </p>
@@ -181,9 +182,10 @@
 <!-- /tmpl_loop -->
 </tbody> 
   </table>
-
-</div> 
-</div> 
+<!-- 
+    </div> 
+    </div> 
+--> 
 
 
 <!-- end  begin view_list_table_widget.tmpl --> 
