--- a/dada/templates/web_services.tmpl
+++ b/dada/templates/web_services.tmpl
@@ -26,7 +26,7 @@
          Public and Private Keys have been reset.
         </p>
 		<div style="text-align: center;">
-		<input type="button" class="small_button fade_me" value="Thanks!" />
+		<input type="button" class="button small fade_me" value="Thanks!" />
 		</div>
 	</div>
 <!-- /tmpl_if -->
