--- a/dada/templates/delete_list_screen.tmpl
+++ b/dada/templates/delete_list_screen.tmpl
@@ -13,35 +13,28 @@
 </div>
 
 
-
-    <div class="alert-box alert radius">
-        <p>
-    	 Are you sure you want to completely delete your Mailing List?
-    	</p>
-
-    	<p>Mailing List Deletion cannot be undone.</p> 
-
-	</div> 
-
-
-<fieldset> 
-	
 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" id="delete_list_form" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
+    <input type="hidden" name="flavor"  value="delete_list" />
+    <input type="hidden" name="process" value="true" />
 
-
-<input type="hidden" name="flavor"  value="delete_list" />
-<input type="hidden" name="process" value="true" />
-
-<div class="buttonfloat">
- <input type="submit" class="alertive" value="Delete Your Mailing List (<!-- tmpl_var name="list_settings.list_name" ESCAPE="HTML" -->)" />
-</div>
-<div class="floatclear"></div>
-
+    <fieldset> 
+        <div class="alert-box alert radius">
+            <p>
+                Are you sure you want to completely delete your Mailing List?
+            </p>
+            <p>
+                Mailing List Deletion cannot be undone.
+            </p> 
+        </div>
+    
+        <ul class="button-group right">    
+            <li>
+                <input type="submit" class="button alertive" value="Delete Your Mailing List (<!-- tmpl_var name="list_settings.list_name" ESCAPE="HTML" -->)" />
+            </li>
+        </ul>
+    </fieldset>
 </form> 
-
-
-</fieldset>
-	
+    
 
 
 
