--- a/dada/templates/edit_type_screen.tmpl
+++ b/dada/templates/edit_type_screen.tmpl
@@ -75,7 +75,7 @@
 		
 		<!-- tmpl_unless list_settings.private_list -->
     		<!-- tmpl_if unsub_link_found_in_pt_mlm --> 
-    			<div data-alert class="alert-box success radius">> 
+    			<div class="alert-box info radius"> 
         			<p>
         				Unsubscribe Link found in template.
         			</p>
@@ -125,7 +125,7 @@
         
 		<!-- tmpl_unless list_settings.private_list -->	
     		<!-- tmpl_if unsub_link_found_in_html_mlm --> 
-        		<div data-alert class="alert-box success radius">> 
+        		<div class="alert-box info radius"> 
         			<p>
         				Unsubscribe Link found in template.
         			</p>
@@ -617,7 +617,7 @@
    
    <div id="adv_options" style="display:none;width:90%">
 
-<table cellpadding="5">
+<table  cellpadding="5">
 	<tr>
 	 <td>
 		<input type="checkbox" id="enable_email_template_expr" name="enable_email_template_expr" value="1" <!-- tmpl_if list_settings.enable_email_template_expr -->checked="checked"<!--/tmpl_if --> /> 
@@ -666,7 +666,7 @@
 	
 	
 	
-<table class="tagchart">
+<table  class="tagchart">
 	<tr align="center">
 		<td>
 			<strong>
