--- a/dada/templates/list_search_form_widget.tmpl
+++ b/dada/templates/list_search_form_widget.tmpl
@@ -1,18 +1,38 @@
 <!-- begin list_search_form_widget.tmpl --> 
-    <div id="basic_list_search_form">
-        <form id="search_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->" style="display: inline; margin: 0;" >
-          <input type="text"   name="query" id="search_query" class="small_input" value="<!-- tmpl_var query default="" escape="HTML" -->" />
-          <input type="hidden" name="flavor"    value="view_list" />
-          <input type="hidden" name="type" value="<!-- tmpl_var type default="list" -->" />
-          <input type="button" class="small_button search_list" value="Search <!-- tmpl_var type_title escape="HTML" -->" />
 
-          <!-- tmpl_if query --> 
-     		<input type="button" class="small_button clear_search" value="Clear" />
-     	    <br /> 
-     	 <!-- /tmpl_if --> 
-     	  
-        <input type="button" class="small_button show_advanced_search_list" value="Advanced..." />
-          <p>
-        </form>
-    </div> 
+<div id="basic_list_search_form">
+    <form id="search_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->" style="display: inline; margin: 0;" >
+      <input type="hidden" name="flavor"    value="view_list" />
+      <input type="hidden" name="type" value="<!-- tmpl_var type default="list" -->" />
+        <div class="row right">
+          <div class="large-12 columns">
+            <div class="row collapse">
+              <div class="small-4 columns">
+                  <input type="text"   name="query" id="search_query" class="small" value="<!-- tmpl_var query default="" escape="HTML" -->" />
+              </div>
+              <div class="small-8 columns">
+                      <ul class="button-group">    
+
+                      <li>
+                          <input type="button" class="button small search_list" value="Search <!-- tmpl_var type_title escape="HTML" -->" />
+                      </li>
+                      <!-- tmpl_if query --> 
+                            <li>
+                                <input type="button" class="button small clear_search" value="Clear" />
+                            </li>
+                 	 <!-- /tmpl_if --> 
+                        <li>
+                            <input type="button" class="button small show_advanced_search_list" value="Advanced..." />
+                        </li>
+                    </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="clearfix"></div>
+    </form> 
+</div> 
 <!-- end list_search_form_widget.tmpl --> 
+
+
+
