--- a/dada/templates/mass_mailing_limit_notice_widget.tmpl
+++ b/dada/templates/mass_mailing_limit_notice_widget.tmpl
@@ -19,12 +19,12 @@
 		
 	<!-- tmpl_else --> 
 		<!--
-			<div data-alert class="alert-box success radius">><p>Your Mass Mailing can begin immediately.</p></div> 
+			<div class="alert-box info radius"><p>Your Mass Mailing can begin immediately.</p></div> 
 		--> 
 	<!-- /tmpl_if --> 
 <!-- tmpl_else --> 
 	<!--
-		<div data-alert class="alert-box success radius">><p>Your Mass Mailing can begin immediately.</p></div> 
+		<div class="alert-box info radius"><p>Your Mass Mailing can begin immediately.</p></div> 
 	-->
 <!-- /tmpl_if -->
 
