--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -43,7 +43,7 @@
 
     <!-- tmpl_if draft_id --> 
         <!-- tmpl_if expr="(draft_role eq 'draft')" --> 
-        	<div data-alert class="alert-box success radius">>
+        	<div class="alert-box info radius">
         		<p>
         			Draft message restored below:
         		</p>
@@ -235,7 +235,7 @@
 		  </tr> 
 		  <tr>
 		   <td>
-			<table class="simplebox">
+			<table  class="simplebox">
 			 <tr>
 			  <td>
 			   <p>
