--- a/dada/templates/subscription_options_screen.tmpl
+++ b/dada/templates/subscription_options_screen.tmpl
@@ -17,44 +17,42 @@
 
 
 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="default_form">
-	
+    <input type="hidden" name="process" value="1" />
+    <input type="hidden" name="flavor"       value="subscription_options" />
+    
 <fieldset> 
 	<legend>
 	Membership &#187; View
 	</legend>
-	<p>
-	 Show <!-- tmpl_var vlsn_menu --> addresses at a time.
-	</p>
-	
-	
-	<!-- tmpl_if can_have_subscriber_fields --> 
-	
-    	<table cellpadding="5">
-          <tr>
-           <td width="25">
-            <p>
-             <input type="checkbox" name="view_list_show_timestamp_col" id="view_list_show_timestamp_col" value="1" <!-- tmpl_if list_settings.view_list_show_timestamp_col -->checked="checked"<!--/tmpl_if--> />
-            </p>
-           </td>
-           <td>
-            <p>
-             <label for="view_list_show_timestamp_col">
-              Show, &quot;Subscription Date&quot; Column
-             </label>
-            </p>
-           </td>
-          </tr>
-         </table>
 
 
-     	<p>
-     	 <label for="view_list_order_by">Order by:</label>
-     	 <!-- tmpl_var view_list_order_by_menu --> 
-     	 <!-- tmpl_var view_list_order_by_direction_menu -->
-     	</p>
 
+    <div class="row">
+        <div class="small-12 columns">
+            <label for="list_show_timestamp_col">
+                # addresses shown at a time:
+            </label>
+            <!-- tmpl_var vlsn_menu -->
+        </div> 
+    </div> 
+    <!-- tmpl_if can_have_subscriber_fields --> 
+	
+        <div class="row">
+            <div class="small-12 columns">
+                <input type="checkbox" name="view_list_show_timestamp_col" id="view_list_show_timestamp_col" value="1" <!-- tmpl_if list_settings.view_list_show_timestamp_col -->checked="checked"<!--/tmpl_if--> />
+                <label for="view_list_show_timestamp_col">
+                 Show, &quot;Subscription Date&quot; Column
+                </label>
+            </div> 
+        </div>
+        <div class="row">
+            <div class="small-12 columns">
+                 <label for="view_list_order_by">Order by:</label>
+                 <!-- tmpl_var view_list_order_by_menu --> 
+                 <!-- tmpl_var view_list_order_by_direction_menu -->
+             </div> 
+         </div>
     <!-- /tmpl_if --> 
-
 
 </fieldset>
 
@@ -64,27 +62,23 @@
 	Membership &#187; Invite/Subscribe/Add
 	</legend>
     
-    
-    <table width="100%">
-     <tr>
-      <td width="20">
-       <p>
-        <input type="checkbox" name="use_add_list_import_limit" id="use_add_list_import_limit" <!-- tmpl_if list_settings.use_add_list_import_limit -->checked="checked"<!-- /tmpl_if --> value="1" />
-       </p>
-      </td> 
-      <td>
-        <p>
-        <label for="use_add_list_import_limit"> 
-        Limit the number of addresses to Invite/Subscribe/Add at a time to: 
-        </label>
+        <div class="row">
+            <div class="small-12 columns">
+            <input type="checkbox" name="use_add_list_import_limit" id="use_add_list_import_limit" <!-- tmpl_if list_settings.use_add_list_import_limit -->checked="checked"<!-- /tmpl_if --> value="1" />
+            <label for="use_add_list_import_limit"> 
+            Limit the number of addresses processed to:
+            </label>
+        </div> 
+    </div> 
+    <div class="row">
+        <div class="small-12 columns">
         <!-- tmpl_var add_list_import_limit_menu -->
-        <br /> 
-        <em>(The larger the number, the slower the process)</em>
-        </p>
-      </td> 
-    </tr> 
-    
-  </table> 
+        <div class="alert-box info radius">
+		    The larger the number, the slower the process
+		</div>
+	    </div> 
+    </div>
+
 
 </fieldset> 
 
@@ -98,138 +92,111 @@
 
 	<!-- tmpl_if SUBSCRIPTION_QUOTA --> 
 
-		<div data-alert class="alert-box success radius">>
+		<div class="alert-box info radius">
 	    	<p>
 	     	Currently, there is a Global limit of <!-- tmpl_var commified_subscription_quota --> Subscribers per Mailing List.
 	    	</p>
 		</div>
-
 	<!-- tmpl_else --> 
 
-		<div data-alert class="alert-box success radius">>
-	     <p>There are no Global Subscription Quotas!</p>
+		<div class="alert-box info radius">
+	     There are no Global Subscription Quotas!
 	    </div>
-
 	<!--/tmpl_if--> 
 
-
-<table width="100%">
- <tr>
-  <td width="20">
-   <p>
-    <input type="checkbox" name="use_subscription_quota" id="use_subscription_quota" value="1" <!-- tmpl_if list_settings.use_subscription_quota -->checked="checked"<!--/tmpl_if--> />
-   </p>
-  </td>
-  <td>
-   <p>
-    <label for="use_subscription_quota">
-     Limit the Number of Subscribers
-    </label>
-   </p>
-  </td>
- </tr>
- <tr>
-  <td  width="20">
-   <p>&nbsp;</p>
-  </td>
-  <td>
-   <p>
-    Limit to: <!-- tmpl_var subscription_quota_menu --> subscribers
-   </p>
-  </td>
- </tr>
-</table>
-</fieldset>
-
+    <div class="row">
+        <div class="small-12 columns">
+            <input type="checkbox" name="use_subscription_quota" id="use_subscription_quota" value="1" <!-- tmpl_if list_settings.use_subscription_quota -->checked="checked"<!--/tmpl_if--> />
+            <label for="use_subscription_quota">
+                Limit the Number of Subscribers
+            </label>
+        </div>
+    </div>
+    <div class="row">
+        <div class="small-12 columns">
+            <!-- tmpl_var subscription_quota_menu -->
+        </div> 
+    </div> 
+</fieldset> 
 
 <fieldset>
 	<legend>Subscriber Profiles</legend>
 
-    <table width="100%">
+    <div class="row">
+        <div class="small-12 columns">
+            When logged into the mailing list with the <strong>List Password</strong>,
+        </div> 
+    </div>
 
-     <tr>
-      <td width="20">
-       <p>
-        <input type="checkbox" name="allow_profile_editing" id="allow_profile_editing" <!-- tmpl_if list_settings.allow_profile_editing -->checked="checked"<!-- /tmpl_if -->   value="1" />
-       </p>
-      </td> 
-      <td>
-        <p>
-        <label for="allow_profile_editing"> 
-        Allow Profile Field Editing
-        </label><br /> 
-        <em>When logged into the mailing list with the <strong>List Password</strong></em>
-        </p> 
+    <div class="row">
+        <div class="small-12 columns">
+            <input 
+                type="checkbox" 
+                name="allow_profile_editing" 
+                id="allow_profile_editing" 
+                <!-- tmpl_if list_settings.allow_profile_editing -->checked="checked"<!-- /tmpl_if -->  
+                value="1"
+             />
+            <label for="allow_profile_editing"> 
+                Allow Profile Field Editing
+            </label>
+        </div> 
+    </div> 
+    
+       <div class="alert-box info radius">
+            <p>When enabled, <strong>Advanced Profile Options</strong> will also be available during mass subscribing, including: </p>
+                <ul> 
+                    <li>Preserving or Updating Profile information, for new Subscribers</li> 
+                    <li>Importing Subscribers with missing and required Profile Fields</li> 
+                    <li>Updating Profile Information] for Subscribers that are already members</li> 
+                </ul> 
+            </p>
             
-        <p><strong>Advanced Profile Options</strong> will also be available during mass subscribing, including: </p>
-            <ul> 
-                <li>Preserving or Updating Profile information, for new Subscribers</li> 
-                <li>Importing Subscribers with missing and required Profile Fields</li> 
-                <li>Updating Profile Information] for Subscribers that are already members</li> 
-            </ul> 
-        </p>
-            
-            <p>
-                When disabled, the original data will always be <strong>preserved</strong>. 
-        </p>
+                <p>
+                    When disabled, the original data will always be <strong>preserved</strong>. 
+            </p>
         
-        <p>
-            <em> 
-                All these options will be available when logged in with the 
-                <strong>
-                <!-- tmpl_var PROGRAM_NAME --> Root Password. 
-            </strong> 
-        </em>
-        </p>
-      </td> 
-    </tr> 
-</table> 
-
-
+            <p>
+                <em> 
+                    These options are always available when logged in with the 
+                    <strong>
+                        <!-- tmpl_var PROGRAM_NAME --> Root Password. 
+                    </strong> 
+                </em>
+            </p>
+        </div> 
 </fieldset> 
 
 
 
 <fieldset>
  <legend>
-	  Invitations
+	  List Invitations
  </legend>
 
- <table cellpadding="5">
-   <tr>
-    <td>
-     <p>
-      <input type="checkbox" name="invites_check_for_already_invited" id="invites_check_for_already_invited" value="1" <!-- tmpl_if list_settings.invites_check_for_already_invited -->checked="checked"<!--/tmpl_if--> />
-     </p>
-    </td>
-    <td>
-     <p>
-      <label for="invites_check_for_already_invited">
-       Check for Already Invited Addresses, Before Sending a List Invitation
-      </label>
-	<br /> 
-	<table>
-   <tr>
-    <td>
-     <p>
-      <input type="checkbox" name="invites_prohibit_reinvites" id="invites_prohibit_reinvites" value="1" <!-- tmpl_if list_settings.invites_prohibit_reinvites -->checked="checked"<!--/tmpl_if--> />
-     </p>
-    </td>
-    <td>
-     <p>
-      <label for="invites_prohibit_reinvites">
-       Prohibit re-Inviting Addresses
-      </label>
-     </p>
-    </td>
-   </tr>
-  </table>
-     </p>
+      <div class="row">
+          <div class="small-12 columns">      
+              <input 
+                type="checkbox"
+                name="invites_check_for_already_invited" 
+                id="invites_check_for_already_invited" 
+                value="1" 
+                <!-- tmpl_if list_settings.invites_check_for_already_invited -->checked="checked"<!--/tmpl_if--> 
+               />
+              <label for="invites_check_for_already_invited">
+               Check for Already Invited Addresses, Before Sending a List Invitation
+              </label>
+         </div> 
+    </div>
 
-    </td>
-   </tr>
-  </table>
-
+    <div class="row">
+        <div class="small-12 small-offset-1 columns">      
+          <input type="checkbox" name="invites_prohibit_reinvites" id="invites_prohibit_reinvites" value="1" <!-- tmpl_if list_settings.invites_prohibit_reinvites -->checked="checked"<!--/tmpl_if--> />
+          <label for="invites_prohibit_reinvites">
+              Prohibit re-Inviting Addresses
+          </label>
+       </div> 
+  </div>
 
 
 </fieldset> 
@@ -240,90 +207,85 @@
 	  Black List
  </legend>
 
-<p>The Black List is a list of addresses that are <strong>not allowed</strong> to be a part of your Subscribers List.</p>
+<div class="alert-box info radius">
 
-<p>You may add both complete email addresses  (you@example.com) or 
- parts of email addresses (example.com).</p>
+    <p>The Black List is a list of addresses that are <strong>not allowed</strong> to be a part of your Subscribers List.</p>
 
-<p>
-	Parts of email addresses will match whole addresses. For example, &quot;example.com&quot; will match, &quot;you@example.com&quot; and, &quot;someone.else@example.com&quot;
-</p>
+    <p>You may add both complete email addresses  (you@example.com) or 
+     parts of email addresses (example.com).</p>
 
-<p>
-	The Black List is primarily used to make sure that Subscribers that have been unsubscribed are not inadvertently re-subscribed. 
-</p>
-	 <table>
-	   <tr>
-	    <td>
-	     <p>
+    <p>
+    	Parts of email addresses will match whole addresses. For example, &quot;example.com&quot; will match, &quot;you@example.com&quot; and, &quot;someone.else@example.com&quot;
+    </p>
+
+    <p>
+    	The Black List is primarily used to make sure that Subscribers that have been unsubscribed are not inadvertently re-subscribed. 
+    </p>
+</div> 
+
+<div class="row">
+    <div class="small-12 columns">
 	      <input type="checkbox" name="black_list" id="black_list" value="1" <!-- tmpl_if list_settings.black_list -->checked="checked"<!--/tmpl_if--> />
-	     </p>
-	    </td>
-	    <td>
-	     <p>
 	      <label for="black_list">
 	       Activate Black List
 	      </label>
-	     </p>
-		<table> 
-			 <tr>
-			    <td>
-			     <p>
-			      <input type="checkbox" name="add_unsubs_to_black_list" id="add_unsubs_to_black_list" value="1" <!-- tmpl_if list_settings.add_unsubs_to_black_list -->checked="checked"<!--/tmpl_if--> />
-			     </p>
-			    </td>
-			    <td>
-			     <p>
-			      <label for="add_unsubs_to_black_list">
-			       Move Addresses to the Black List after they are Unsubscribed
-			      </label>
-			     </p>
-			    </td>
-			   </tr>
-			   <tr>
-			    <td>
-			     <p>
-			      <input type="checkbox" name="allow_blacklisted_to_subscribe" id="allow_blacklisted_to_subscribe" value="1" <!-- tmpl_if list_settings.allow_blacklisted_to_subscribe -->checked="checked"<!--/tmpl_if--> />
-			     </p>
-			    </td>
-			    <td>
-			     <p>
-			      <label for="allow_blacklisted_to_subscribe">
-			       Continue to Allow Black Listed Addresses to Subscribe Themselves
-			      </label>
-			     </p>
-			    </td>
-			   </tr>
+	 </div> 
+</div> 
+<div class="row">
+      <div class="small-12 small-offset-1 columns">
+          <input type="checkbox" 
+            name="add_unsubs_to_black_list" 
+            id="add_unsubs_to_black_list" 
+            value="1" 
+            <!-- tmpl_if list_settings.add_unsubs_to_black_list -->checked="checked"<!--/tmpl_if-->
+           >
+          <label for="add_unsubs_to_black_list">
+           Move Addresses to the Black List after they are Unsubscribed
+          </label>    
+      </div>
+  </div> 
+  <div class="row">
+      <div class="small-12 small-offset-1 columns">
+          <input 
+            type="checkbox" 
+            name="allow_blacklisted_to_subscribe" 
+            id="allow_blacklisted_to_subscribe" 
+            value="1" 
+            <!-- tmpl_if list_settings.allow_blacklisted_to_subscribe -->checked="checked"<!--/tmpl_if-->
+           >
+          <label for="allow_blacklisted_to_subscribe">
+           Continue to Allow Black Listed Addresses to Subscribe Themselves
+          </label>
+      </div> 
+    </div> 
+    <!-- tmpl_if ENFORCE_CLOSED_LOOP_OPT_IN --> 
+        <!-- ... --> 
+    <!-- tmpl_else --> 
+        <div class="row">         
+          <div class="small-12 small-offset-1 columns">
+                <input 
+                    type="checkbox" 
+                    name="allow_admin_to_subscribe_blacklisted" 
+                    id="allow_admin_to_subscribe_blacklisted" 
+                    value="1" 
+                    <!-- tmpl_if list_settings.allow_admin_to_subscribe_blacklisted -->checked="checked"<!--/tmpl_if-->
+                 >
+                <label for="allow_admin_to_subscribe_blacklisted">
+                Continue to Allow Black Listed Addresses to be Invited/Subscribed via The List Control Panel. 
+                </label>
+                <br />
+                Black Listed Addresses will just need to be manually checked/selected to be Invited/Subscribed.  
+            </div> 
+        </div> 
+    <!-- /tmpl_if -->
+    
+  
+  
+       
 
-			<!-- tmpl_if ENFORCE_CLOSED_LOOP_OPT_IN --> 
-				<!-- ... --> 
-			<!-- tmpl_else --> 
-			
-				   <tr>
-				    <td>
-				     <p>
-				      <input type="checkbox" name="allow_admin_to_subscribe_blacklisted" id="allow_admin_to_subscribe_blacklisted" value="1" <!-- tmpl_if list_settings.allow_admin_to_subscribe_blacklisted -->checked="checked"<!--/tmpl_if--> />
-				     </p>
-				    </td>
-				    <td>
-				     <p>
-				      <label for="allow_admin_to_subscribe_blacklisted">
-				       Continue to Allow Black Listed Addresses to be Invited/Subscribed Via The List Control Panel. 
-				      </label>
-					  <br />
-					  Black Listed Addresses will just need to be manually checked/selected to be Invited/Subscribed.  
-				     </p>
-				   </td>
-				  </tr>
-			
-			<!-- /tmpl_if --> 
-			
-			</table> 
-	    </td>
-	   </tr>
-	  
-	 </table>
 
+
+			
 </fieldset>
 
 
@@ -333,41 +295,33 @@
       White List
 	 </legend>
 	
-<p>
-	The White List are a list of email addresses only allowed to be a part of your Subscribers List.</p>	
-	<p>You may add both complete email addresses (you@example.com) or 
-	 parts of email addresses (example.com).</p>
-
-	<p>
-		Parts of email addresses will match whole addresses. For example, &quot;example.com&quot; will match, &quot;you@example.com&quot; and, &quot;someone.else@example.com&quot;
-	</p>
-
+	<div class="alert-box info radius">
 	
-	 <table>
-	   <tr>
-	    <td>
-	     <p>
-	      <input type="checkbox" name="enable_white_list" id="enable_white_list" value="1" <!-- tmpl_if list_settings.enable_white_list -->checked="checked"<!--/tmpl_if--> />
-	     </p>
-	    </td>
-	    <td>
-	     <p>
-	      <label for="enable_white_list">
-	       Activate White List
-	      </label>
-	     </p>
-	    </td>
-	   </tr>
-      </table>
-</fieldset>
-	
-<input type="hidden" name="process" value="1" />
-<input type="hidden" name="flavor"       value="subscription_options" />
-<div class="buttonfloat">
- <input type="reset"  class="cautionary" value="Clear Changes" />
- <input type="submit" class="processing" value="Save Subscription Options" />
-</div>
-<div class="floatclear"></div>
+        <p>
+        	The White List are a list of email addresses only allowed to be a part of your Subscribers List.</p>	
+        	<p>You may add both complete email addresses (you@example.com) or 
+        	 parts of email addresses (example.com).</p>
+
+        <p>
+        	Parts of email addresses will match whole addresses. For example, &quot;example.com&quot; will match, &quot;you@example.com&quot; and, &quot;someone.else@example.com&quot;
+        </p>
+    </div> 
+    
+	<div class="row">
+          <div class="small-12 columns">
+    	      <input type="checkbox" name="enable_white_list" id="enable_white_list" value="1" <!-- tmpl_if list_settings.enable_white_list -->checked="checked"<!--/tmpl_if--> />
+    	      <label for="enable_white_list">
+    	          Activate White List
+    	      </label>
+	     </div> 
+	</div> 
+</fieldset> 
+
+<ul class="button-group right">    
+ <li><input type="reset"  class="button cautionary" value="Clear Changes" /></li>
+ <li><input type="submit" class="button processing" value="Save Subscription Options" /></li>
+</ul>
+
 </form> 
 
  
