--- a/dada/templates/view_list_viewport_widget.tmpl
+++ b/dada/templates/view_list_viewport_widget.tmpl
@@ -21,227 +21,209 @@
 
 
 <!-- tmpl_unless total_num -->
-	<!-- tmpl_if query --> 
-			<p class="alert">
-				No Results were found.
-			</p>
-			<p><label for="query">Search Again:</label></p> 
-			<!-- tmpl_include list_search_form_widget.tmpl -->
-	<!-- tmpl_else --> 
-	
-	
-	    <!-- tmpl_if advanced_query --> 
-    		<p class="alert">
-    			No Results were found.
-    		</p>	        
-	    <!-- tmpl_else -- >
-	        
-    		<p class="alert">
-    		 There are currently no members of, <!-- tmpl_var type_title -->.
-	
-    		    <!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'moderators') || (type eq 'white_list'))" -->
-		
-    				<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=add&amp;type=<!-- tmpl_var type -->">
-    					<!-- tmpl_if EXPR="(type eq 'list')" -->
-    							Invite
-    							<!-- tmpl_if expr="((list_settings.enable_mass_subscribe == 1) && ((root_login == 1) || (list_settings.enable_mass_subscribe_only_w_root_login != 1)))" -->
-    					/ Add
-    							<!-- /tmpl_if -->
-    						<!-- tmpl_else --> 
-    							Add
-    						<!-- /tmpl_if -->
-    		    	</a>
-    		    <!-- /tmpl_if --> 
-		   	<!-- /tmpl_if -->
-		</p>
-	
-	<!-- /tmpl_if --> 
-	
+    <!-- tmpl_if query --> 
+            <p class="alert">
+                No Results were found.
+            </p>
+            <p><label for="query">Search Again:</label></p> 
+            <!-- tmpl_include list_search_form_widget.tmpl -->
+    <!-- tmpl_else --> 
+    
+    
+        <!-- tmpl_if advanced_query --> 
+            <p class="alert">
+                No Results were found.
+            </p>            
+        <!-- tmpl_else -- >
+            
+            <p>
+             There are currently no members of, <!-- tmpl_var type_title -->.
+                <!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'moderators') || (type eq 'white_list'))" -->
+        
+                    <a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=add&amp;type=<!-- tmpl_var type -->">
+                        <!-- tmpl_if EXPR="(type eq 'list')" -->
+                                Invite
+                                <!-- tmpl_if expr="((list_settings.enable_mass_subscribe == 1) && ((root_login == 1) || (list_settings.enable_mass_subscribe_only_w_root_login != 1)))" -->
+                        / Add
+                                <!-- /tmpl_if -->
+                            <!-- tmpl_else --> 
+                                Add
+                            <!-- /tmpl_if -->
+                    </a>
+                <!-- /tmpl_if --> 
+               <!-- /tmpl_if -->
+        </p>
+    
+    <!-- /tmpl_if --> 
+    
 <!-- tmpl_else -->
 
-	<br />
-	
-	<div style="padding-top:10px">
-		&nbsp;<!-- ugly hack to get the below table down a bit. -->
-	</div>
-	
-	<table class="stripedtable">
-	 <tr>
-	  <td>
+<!-- tmpl_unless advanced_search --> 
+    <!-- tmpl_include list_search_form_widget.tmpl --> 
+<!-- tmpl_else --> 
+    
+<!-- /tmpl_unless --> 
+
+<div class="row"> 
+    <div class="small-6 columns">
+        
+      <!-- tmpl_if expr="(defined(query)) || (defined(advanced_query))" --> 
+         Search Results 
+            <strong>
+             <!-- tmpl_var first -->
+            </strong>
+            to 
+            <strong>
+             <!-- tmpl_var last -->
+            </strong>
+            of
+            <strong>
+                <!-- tmpl_var total_num_commified --> 
+           </strong>
+          <!-- tmpl_unless advanced_search --> 
+            for, <em><!-- tmpl_var query escape=HTML --></em>
+         <!-- /tmpl_unless --> 
+
+    <!-- tmpl_else --> 
+    
+        <!-- tmpl_var type_title -->
+        <strong>
+         <!-- tmpl_var first -->
+        </strong>
+        to 
+        <strong>
+         <!-- tmpl_var last -->
+        </strong>
+        of
+        <strong>
+            <!-- tmpl_var num_subscribers --> 
+       </strong>
+
+        <!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'moderators') || (type eq 'white_list'))" -->
+            <a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=add&amp;type=<!-- tmpl_var type -->">
+                    <!-- tmpl_if EXPR="(type eq 'list')" -->
+                        Invite
+                        <!-- tmpl_if expr="((list_settings.enable_mass_subscribe == 1) && ((root_login == 1) || (list_settings.enable_mass_subscribe_only_w_root_login != 1)))" -->
+                        / Subscribe
+                        <!-- /tmpl_if -->
+                    <!-- tmpl_else --> 
+                        Add
+                    <!-- /tmpl_if -->
+            </a>...
+        <!-- /tmpl_if -->
+
+    <!-- /tmpl_if -->
+    
+    </div> 
+    <div class="small-6 columns"> 
+        <!-- tmpl_include view_list_pagination_widget.tmpl -->
+    </div> 
+</div> 
 
 
-  	<!-- tmpl_if expr="(defined(query)) || (defined(advanced_query))" --> 
-
- 		Search Results 
-			<strong>
-		     <!-- tmpl_var first -->
-		    </strong>
-		    to 
-		    <strong>
-		     <!-- tmpl_var last -->
-		    </strong>
-			of
-			<strong>
-				<!-- tmpl_var total_num_commified --> 
-		   </strong>
-		  <!-- tmpl_unless advanced_search --> 
-		    for, <em><!-- tmpl_var query escape=HTML --></em>
-		 <!-- /tmpl_unless --> 
-
-	<!-- tmpl_else --> 
-	
-   	 <!-- tmpl_var type_title -->
-	    <strong>
-	     <!-- tmpl_var first -->
-	    </strong>
-	    to 
-	    <strong>
-	     <!-- tmpl_var last -->
-	    </strong>
-		of
-		<strong>
-			<!-- tmpl_var num_subscribers --> 
-	   </strong>
-
-	
-		<!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'moderators') || (type eq 'white_list'))" -->
-			<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=add&amp;type=<!-- tmpl_var type -->">
-					<!-- tmpl_if EXPR="(type eq 'list')" -->
-						Invite
-						<!-- tmpl_if expr="((list_settings.enable_mass_subscribe == 1) && ((root_login == 1) || (list_settings.enable_mass_subscribe_only_w_root_login != 1)))" -->
-						/ Subscribe
-						<!-- /tmpl_if -->
-					<!-- tmpl_else --> 
-						Add
-					<!-- /tmpl_if -->
-	    	</a>...
-		<!-- /tmpl_if -->
-
-	<!-- /tmpl_if -->
-	
-
-	
-	  </td>
-	
-	<td style="text-align:center">
-		<!-- tmpl_include view_list_slide_nav_widget.tmpl -->
-	</td>
-
-	
-	
-	<td style="text-align:right">
-	
-	    <!-- tmpl_unless advanced_search --> 
-		    <!-- tmpl_include list_search_form_widget.tmpl --> 
-		<!-- tmpl_else --> 
-		   <p> &nbsp; </p>
-	    <!-- /tmpl_unless --> 
-	</td> 
-	
-	 </tr>
-	</table>
+    <form name="email_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
+    
+         <!-- tmpl_include view_list_table_widget.tmpl --> 
 
 
-	<form name="email_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
-	
-	 	<!-- tmpl_include view_list_table_widget.tmpl --> 
-	
-	<table class="stripedtable">
-	  <tr>
-	   		<td width="25">
-	    		<input class="toggleCheckboxes" type="checkbox" data-target_class="address" />
-	   		</td>
+    <div class="row"> 
+        <div class="small-1 columns"> 
+              <input class="toggleCheckboxes" type="checkbox" data-target_class="address" />
+        </div> 
+        <div class="small-11 columns">
+            <ul class="button-group">
+                
+        <!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'moderators') || (type eq 'white_list'))" -->
 
-		
-			<td>
-				
-	
-	<!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'moderators') || (type eq 'white_list'))" -->
+             <input type="hidden" name="process" value="delete" />
+             <input type="hidden" name="flavor"       value="remove_subscribers" />
+             <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
+            <!-- tmpl_if expr="(type eq 'list')" -->
+                 <li>
+                     <input type="submit" class="small button" value="&#8592; Unsubscribe Checked Subscribers">
+                 </li>
+            <!-- tmpl_else --> 
+                <li>
+                    <input type="submit" class="small button" value="&#8592; Remove Checked <!-- tmpl_var type_title -->" />
+                </li>
+            <!-- /tmpl_if --> 
+        
+        <!-- /tmpl_if -->
 
-		 <input type="hidden" name="process" value="delete" />
-		 <input type="hidden" name="flavor"       value="remove_subscribers" />
-		 <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
-		<!-- tmpl_if expr="(type eq 'list')" -->
-		 	<input type="submit" class="small_button" value="&#8592; Unsubscribe Checked Subscribers" />
-		<!-- tmpl_else --> 
-			<input type="submit" class="small_button" value="&#8592; Remove Checked <!-- tmpl_var type_title -->" />
-		<!-- /tmpl_if --> 
-		
-	<!-- /tmpl_if -->
+        <!-- tmpl_if EXPR="(type eq 'sub_request_list')" -->
 
-	<!-- tmpl_if EXPR="(type eq 'sub_request_list')" -->
+             <input type="hidden" name="flavor"       value="subscription_requests" />
+             <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
+             <input type="submit" name="process" class="small button" value="Approve Checked Subscription Requests" />
+             <li>
+                 <input type="submit" name="process" class="small button" value="Deny Checked Subscription Requests" />
+             </li>
+        <!-- /tmpl_if -->
 
-		 <input type="hidden" name="flavor"       value="subscription_requests" />
-		 <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
-		 <input type="submit" name="process" class="small_button" value="Approve Checked Subscription Requests" />
-		 <input type="submit" name="process" class="small_button" value="Deny Checked Subscription Requests" />
+        <!-- tmpl_if EXPR="(type eq 'unsub_request_list')" -->
 
-	<!-- /tmpl_if -->
-
-	<!-- tmpl_if EXPR="(type eq 'unsub_request_list')" -->
-
-		 <input type="hidden" name="flavor"        value="unsubscription_requests" />
-		 <input type="hidden" name="type"     value="<!-- tmpl_var type -->" />
-		 <input type="submit" name="process" class="small_button" value="Approve Checked Unsubscription Requests" />
-		 <input type="submit" name="process" class="small_button" value="Deny Checked Unsubscription Requests" />
-
-	<!-- /tmpl_if -->
-	
-	<!-- tmpl_if EXPR="(type eq 'bounced_list')" -->
-	
-			<input type="hidden" name="flavor"     value="process_bouncing_addresses" />
-			 <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
-			
-			 <input type="submit" name="process" class="small_button"  value="&#8594; Move Selected Bouncing Address Back to Subscribers" />
-			 <input type="submit" name="process" class="small_button"  value="&#8855; Remove Selected Bouncing Addresses" />
-			
-	<!-- /tmpl_if -->
-	
-	</form>
-	<!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'moderators') || (type eq 'white_list'))" -->
-		
-		<!-- tmpl_unless query -->
-		
-			<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" style="display:inline;margin:0">
-			 <input type="hidden" name="flavor"       value="remove_all_subscribers" />
-			 <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
-			<!-- tmpl_if expr="(type eq 'list')" -->
-			  <input type="submit" class="small_button" value="&#8656; Unsubscribe ALL <!-- tmpl_var type_title -->" onclick="return unsubscribeAllSubscribers(this.form, '<!-- tmpl_var type_title -->');"   />
-			<!-- tmpl_else --> 
-			  <input type="submit" class="small_button" value="&#8656; Remove ALL <!-- tmpl_var type_title -->" onclick="return unsubscribeAllSubscribers(this.form, '<!-- tmpl_var type_title -->');"   />
-			<!-- /tmpl_if --> 
-			</form>
-		<!-- /tmpl_unless -->
-	<!-- /tmpl_if -->
-	
-</td>
-
-<!-- tmpl_if total_num -->
-	<!-- tmpl_if EXPR="(type eq 'black_list')" -->
-		<!-- tmpl_if can_filter_subscribers_through_blacklist --> 
-			<!-- tmpl_unless query --> 
-				<td>
-				 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="blacklist_filter_form">
-				  <input type="hidden" name="flavor" value="filter_using_black_list" />
-				  <div class="buttonfloat">
-				   <input type="submit" class="small_button" value="Filter Subscribers Through the Black List" />
-				  </div>
-				 </form>
-				</td>
-			<!-- /tmpl_unless -->
-		<!--/tmpl_if-->
-	<!--/tmpl_if-->
-<!--/tmpl_if-->
-
-<td style="text-align:right">
-	<!-- tmpl_include list_download_widget.tmpl -->	
-</td>
+             <input type="hidden" name="flavor"        value="unsubscription_requests" />
+             <input type="hidden" name="type"          value="<!-- tmpl_var type -->" />
+             
+             <li>
+                 <input type="submit" name="process" class="small button" value="Approve Checked Unsubscription Requests" />
+             </li>
+             <li>
+                 <input type="submit" name="process" class="small button" value="Deny Checked Unsubscription Requests" />
+             </li>
+        <!-- /tmpl_if -->
+    
+        <!-- tmpl_if EXPR="(type eq 'bounced_list')" -->
+    
+                <input type="hidden" name="flavor"     value="process_bouncing_addresses" />
+                 <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
+            
+                <li>
+                 <input type="submit" name="process" class="small button"  value="&#8594; Move Selected Bouncing Address Back to Subscribers" />
+                </li>
+                <li>
+                 <input type="submit" name="process" class="small button"  value="&#8855; Remove Selected Bouncing Addresses" />
+                </li>
+        <!-- /tmpl_if -->
+    
+        </form>
+        <!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'moderators') || (type eq 'white_list'))" -->
+        
+            <!-- tmpl_unless query -->
+                <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" style="display:inline;margin:0">
+                 <input type="hidden" name="flavor"       value="remove_all_subscribers" />
+                 <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
+                <!-- tmpl_if expr="(type eq 'list')" -->
+                  <li>
+                      <input type="submit" class="small button" value="&#8656; Unsubscribe ALL <!-- tmpl_var type_title -->" onclick="return unsubscribeAllSubscribers(this.form, '<!-- tmpl_var type_title -->');"   />
+                  </li>
+                <!-- tmpl_else --> 
+                  <li>
+                      <input type="submit" class="small button" value="&#8656; Remove ALL <!-- tmpl_var type_title -->" onclick="return unsubscribeAllSubscribers(this.form, '<!-- tmpl_var type_title -->');"   />
+                  </li>
+                <!-- /tmpl_if --> 
+                </form>
+            <!-- /tmpl_unless -->
+        <!-- /tmpl_if -->
 
 
-			</tr> 
-		</table>
-		
-	
+    <!-- tmpl_if total_num -->
+        <!-- tmpl_if EXPR="(type eq 'black_list')" -->
+            <!-- tmpl_if can_filter_subscribers_through_blacklist --> 
+                <!-- tmpl_unless query --> 
+                     <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="blacklist_filter_form">
+                      <input type="hidden" name="flavor" value="filter_using_black_list" />
+                       <li>
+                           <input type="submit" class="small button" value="Filter Subscribers Through the Black List" />
+                        </li>
+                     </form>
+                <!-- /tmpl_unless -->
+            <!--/tmpl_if-->
+        <!--/tmpl_if-->
+    <!--/tmpl_if-->
+        <!-- tmpl_include list_download_widget.tmpl -->  
+    </div>   
+</div> 
 
 <!-- /tmpl_unless -->
 
